<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/newUsername"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="50dp"/>
    <EditText
        android:id="@+id/newPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/newUsername"/>
    <EditText
        android:id="@+id/newRetypePassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/retype_password"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/newPassword"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="50dp"
        android:layout_below="@id/newRetypePassword"/>

    <Button
        android:id="@+id/btnGoBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:layout_marginTop="50dp"
        android:layout_below="@id/btnSignUp"/>



</RelativeLayout>