<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.CourseCatalogActivity">

    <ExpandableListView
        android:id="@+id/courseCatalogList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/filter_catalog"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        android:layout_alignBottom="@id/bottom_buttons"
        />

    <Button
        android:id="@+id/filter_catalog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/filter"
        android:layout_alignParentTop="true"/>
    <LinearLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/set_my_courses"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/velja_m_na_fanga" />
        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/log_out" />
    </LinearLayout>






</RelativeLayout>